
###############################################################################
#
# THE PROGRAMS TO BUILD
#

# the program to build (the names of the final binaries)
bin_PROGRAMS = paris-traceroute

# list of sources for the paris-traceroute binary
paris_traceroute_SOURCES =    \
                        paris-traceroute.c
                         
# the additional libraries needed to link
paris_traceroute_LDADD =  $(top_builddir)/libparistraceroute/libparistraceroute.a $(AM_LDFLAGS)

