@SET_MAKE@

AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS = test

# paris-traceroute
test_SOURCES = test.c
test_LDADD = -lparistraceroute 
#test_LDFLAGS = -L../libtraceroute 
#test_DEPENDENCIES =
#../libtraceroute/libtraceroute.la

## test_netutils
#test_netutils_SOURCES = test_netutils.c
#test_netutils_LDADD = ../libnet/libnet.la ../libtraceroute/libtraceroute.la
#test_netutils_DEPENDENCIES = ../libnet/libnet.la ../libtraceroute/libtraceroute.la
#
## test_probing
#test_probing_SOURCES = test_probing.c
#test_probing_LDADD = ../libnet/libnet.la ../libtraceroute/libtraceroute.la
#test_probing_DEPENDENCIES = ../libnet/libnet.la ../libtraceroute/libtraceroute.la

