#@SET_MAKE@

#AUTOMAKE_OPTIONS = foreign

###############################################################################
#
# THE PROGRAMS TO BUILD
#

# the program to build (the names of the final binaries)
#bin_PROGRAMS = predicate_test

# list of sources for the paris-traceroute binary
#predicate_test_SOURCES =    \
#                        predicate_test.c

#predicate_test_CFLAGS = -D_GNU_SOURCE
#predicate_test_LDADD = -lparistraceroute-1.0
#predicate_test_LDFLAGS = -L../libparistraceroute
#predicate_test_DEPENDENCIES =

#install-bin: install
